# SAIR

./: .gitignore  .python-version  Lecture_0.ipynb  README.md  main.py  pyproject.toml  requirements.txt
..bfg-report/2025-10-18/05-44-43/: cache-stats.txt  deleted-files.txt  object-id-map.old-new.txt
Classification/: Lec5.json  Lec5x.ipynb  Lecture_4.ipynb  Lecture_5.ipynb  breast_cancer_pipline.py  nn.ipynb  nn2.ipynb
Classification/Pipeline/: .gitignore  README.md  STUCTURE.md  __init__.py  requirements.txt  run_pipline.py  setup.py  tempCodeRunnerFile.py
Classification/Pipeline/config/: __init__.py  config.py
Classification/Pipeline/data/: __init__.py  feature_engineering.py  load_data.py  preprocessing.py
Classification/Pipeline/streamlit_app/: app.py
Classification/Pipeline/utils/: __init__.py  mlflow_utils.py
Classification/data/processed/: X_test_processed.npy  X_train_processed.npy  X_val_processed.npy  y_test.npy  y_train.npy  y_val.npy
Classification/spaceship_experiments/442528966068798013/: meta.yaml
Classification/spaceship_models/v1_20251026_034703/: model_card.json
Classification/spaceship_models/v1_20251026_042135/: model_card.json
Classification/spaceship_models/v1_20251026_171421/: model_card.json
Regression/: Lecture_1.ipynb  Lecture_2.ipynb  Lecture_3.ipynb  README.md  app.py  app_2.py  california_housing_model.pkl  california_housing_model_metadata.json  poly_model.pkl  utils.py  utils2.py
Regression/.gradio/flagged/: dataset1.csv
Regression/mlruns/0/: meta.yaml
Week 1/: Lecture_1.ipynb  Lecture_2.ipynb
(+1617 files in other folders)
