[project]
name = "sair"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gradio>=5.49.1",
    "ipywidgets>=8.1.7",
    "matplotlib>=3.10.6",
    "mlflow>=3.5.0",
    "nbconvert>=7.16.6",
    "numpy>=2.3.3",
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "streamlit>=1.50.0",
]
